--- a/KhTracker/MainWindow.xaml
+++ b/KhTracker/MainWindow.xaml
@@ -69,7 +69,7 @@
                 <MenuItem Header="Anti Form" 				 Click="AntiFormToggle"		x:Name="AntiFormOption"     IsCheckable="True" IsChecked="False"/>
                 <Separator/>
                 <MenuItem Header="World Visit Locks"       Click="VisitLockToggle"	x:Name="VisitLockOption"    IsCheckable="True" IsChecked="True"/>
-                <!--MenuItem Header="World Visit Locks (No 1st)"    Click="VisitLockToggle2"	x:Name="VisitLockOption2"   IsCheckable="True" IsChecked="False"/-->
+                <MenuItem Header="Remove 1st Visit Locks"  Click="VisitLockToggle2"	x:Name="VisitLockOption2"   IsCheckable="True" IsChecked="False" Visibility="Hidden"/>
                 <Separator/>
                 <MenuItem Header="World Chest Locks"         Click="ChestLockToggle"	x:Name="ChestLockOption"    IsCheckable="True" IsChecked="True"/>
                 <MenuItem Header="Extra Important Checks" 	 Click="ExtraChecksToggle"	x:Name="ExtraChecksOption"  IsCheckable="True" IsChecked="True"/>
@@ -3490,7 +3490,7 @@
                         <ColumnDefinition Width="0.6*"/>
                         <ColumnDefinition Width="1*"/>
 
-                        <ColumnDefinition Width="0.0*"/>
+                        <ColumnDefinition Width="0.*"/>
                         <ColumnDefinition Width="0.0*"/>
                         <ColumnDefinition x:Name="SketchesCol" Width="1*"/>
 
