--- a/KhTracker/MainWindow.xaml
+++ b/KhTracker/MainWindow.xaml
@@ -67,15 +67,13 @@
                 <MenuItem Header="Promise Charm"			 Click="PromiseCharmToggle" x:Name="PromiseCharmOption" IsCheckable="True" IsChecked="True"/>
                 <MenuItem Header="Once More / Second Chance" Click="AbilitiesToggle" 	x:Name="AbilitiesOption"    IsCheckable="True" IsChecked="True"/>
                 <MenuItem Header="Anti Form" 				 Click="AntiFormToggle"		x:Name="AntiFormOption"     IsCheckable="True" IsChecked="False"/>
-                <Separator/>
                 <MenuItem Header="World Visit Locks"       Click="VisitLockToggle"	x:Name="VisitLockOption"    IsCheckable="True" IsChecked="True"/>
-                <MenuItem Header="Remove 1st Visit Locks"  Click="VisitLockToggle2"	x:Name="VisitLockOption2"   IsCheckable="True" IsChecked="False" Visibility="Hidden"/>
-                <Separator/>
+                <MenuItem Header="Remove 1st Visit Locks"  Click="VisitLockToggle2"	x:Name="VisitLockOption2"   IsCheckable="True" IsChecked="False" Visibility="Collapsed"/>
                 <MenuItem Header="World Chest Locks"         Click="ChestLockToggle"	x:Name="ChestLockOption"    IsCheckable="True" IsChecked="True"/>
                 <MenuItem Header="Extra Important Checks" 	 Click="ExtraChecksToggle"	x:Name="ExtraChecksOption"  IsCheckable="True" IsChecked="True"/>
                 <Separator/>
                 <MenuItem Header="Show Seed Hash"			    Click="SeedHashToggle"		x:Name="SeedHashOption"			IsCheckable="True" IsChecked="True"/>
-                <!--MenuItem Header="Show Seed Settings"			Click="SeedSettingsToggle"	x:Name="SeedSettingsOption"	    IsCheckable="True" IsChecked="True"/-->
+                <!--MenuItem Header="Show Seed Settings Row"			Click="SeedSettingsToggle"	x:Name="SeedSettingsOption"	    IsCheckable="True" IsChecked="True"/-->
                 <MenuItem Header="Show World Progression Icons" Click="WorldProgressToggle"	 x:Name="WorldProgressOption"	IsCheckable="True" IsChecked="True"/>
                 <MenuItem Header="Show Form and Growth Levels" 	Click="FormsGrowthToggle"    x:Name="FormsGrowthOption"		IsCheckable="True" IsChecked="True"/>
                 <MenuItem Header="Show Death Counter" 	 		Click="DeathCounterToggle"   x:Name="DeathCounterOption"    IsCheckable="True" IsChecked="False"/>
