--- a/KhTracker/MainWindow.xaml
+++ b/KhTracker/MainWindow.xaml
@@ -92,12 +92,13 @@
                 <MenuItem Header="Level 99 Checks"               Click="SoraLevel99Toggle"    x:Name="SoraLevel99Option"    IsCheckable="True" IsChecked="False"/>
             </MenuItem>
             <MenuItem Header="Image Visuals" Focusable="False">
-                <!-- eventually add an ption that pulls up settings window... -->
+                <!-- eventually add an option that pulls up settings window... -->
                 <!--MenuItem Header="Simple Stat/UI Icons" Click="MinStatToggle" x:Name="MinStatOption" IsCheckable="True" IsChecked="True"/>
                 <MenuItem Header="Game Stat/UI Icons"   Click="OldStatToggle" x:Name="OldStatOption" IsCheckable="True" IsChecked="False"/>
                 <Separator/-->
                 <MenuItem Header="New World Layout"     Click="NewWorldLayoutToggle" x:Name="NewWorldLayoutOption" IsCheckable="True" IsChecked="True"/>
                 <MenuItem Header="Classic World Layout" Click="OldWorldLayoutToggle" x:Name="OldWorldLayoutOption" IsCheckable="True" IsChecked="False"/>
+				<MenuItem Header="GOA World Layout"     Click="GOAWorldLayoutToggle" x:Name="GOAWorldLayoutOption" IsCheckable="True" IsChecked="False"/>
                 <Separator/>
                 <MenuItem Header="Colorful Hint Text" Click="ColorHintToggle" x:Name="ColorHintOption" IsCheckable="True" IsChecked="True"/>
                 <Separator/>
